# klingel-external

./: .gitignore  Cargo.toml  Embed.toml
.cargo/: config
hardware/: external.kicad_pcb  external.kicad_prl  external.kicad_pro  external.kicad_sch
src/: adc.rs  app.rs  command.rs  led.rs  main.rs  platform.rs  rs485.rs
