[package]
name = "external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "1.0.0"
fugit = "*"
heapless = "*"
panic-semihosting = "0.5.6"
stm32g0xx-hal = { path = "../stm32g0xx-hal", version = "0.1.3", features = ["stm32g030", "rt"] }
systick-monotonic = "*"
smart-leds = "0.3.0"
ws2812-uart = { path = "../ws2812-uart" }
