[package]
name = "external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.4"
fugit = "0.3.6"
heapless = "0.7.16"
panic-semihosting = "0.6.0"
stm32g0xx-hal = { path = "../stm32g0xx-hal", version = "0.1.3", features = ["stm32g030", "rt"] }
systick-monotonic = "*"
smart-leds = "0.3.0"
ws2812-uart = { path = "../ws2812-uart" }
protocol = { path = "../protocol" }
bounded-integer = { version = "0.5.3", features = ["types"] }
